--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fastify": "^4.28.1",
     "fastify-mikro-orm": "^4.0.0",
     "reflect-metadata": "^0.2.2",
+    "secureeducrypt": "^1.0.0",
     "swagger-ui": "^5.17.14",
     "typeorm": "^0.3.20"
   },
