--- a/package.json
+++ b/package.json
@@ -13,27 +13,31 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^9.0.1",
-    "@fastify/swagger": "^8.14.0",
-    "@fastify/swagger-ui": "^4.0.0",
+    "@fastify/swagger": "^8.15.0",
+    "@fastify/swagger-ui": "^4.1.1",
     "@mikro-orm/core": "^5.9.8",
     "@mikro-orm/mariadb": "^5.9.8",
     "@mikro-orm/mongodb": "5.9.8",
     "@mikro-orm/mysql": "5.9.8",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
+    "fast-xml-parser": "^4.5.0",
     "fastify": "^4.28.1",
     "fastify-mikro-orm": "^4.0.0",
+    "html-to-text": "^9.0.5",
     "reflect-metadata": "^0.2.2",
-    "secureeducrypt": "^1.0.0",
+    "secureeducrypt": "^1.1.11",
     "swagger-ui": "^5.17.14",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/fastify-cors": "^2.1.0",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.14.10",
+    "@types/html-to-text": "^9.0.4",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^20.16.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.3"
+    "typescript": "^5.6.2"
   }
 }
